  * Fixed typo preventing partial zeroing in virtual disk space
    allocation
  * Stopped console windows from popping up when running commands
  * Added salt to the password hashing algorithm

  [ Hampus Wessman ]
  * Added deletion of temporary directory
  * Fixed archive signature search in unpack.c
  * Removed some debugging code

  [ Agostino Russo ]
  * Fixed regression, a premature deletion of the temporary folder was
    preventing a correct startup
  * Factored out code that looks for archive start
  * Compile grub4dos from source as opposed to using precompiled
    binaries
  * Added source files for grub4dos and grubutil
  * Updated mythbuntu and cdmenu preseed templates
  * Added CD-boot-helper functionality
  * Reverted grub4dos to revision 63, since revision 64 had issues when
    displaying the menu
  * Trap unhandled exceptions and log/notify the user
  * Fixed CD-boot helper which was failing when extracting CD content
  * Added installation directory as one of the isolist.ini settings
  * Fixed unhandled exception message, which wasn't showing properly
  * Extract ISO from CD instead of copying the files (the latter
    approach is blocked by #243105)
  * Fixed target drive selection in CD-boot helper mode, which wasn't
    checking available free space
  * Set file attributes to normal before recursively removing a
    directory
  * Updated Wubi Icon
  * Added UI support for Windows themes (LP: #325207)
  * Fixed uninstaller, that was not being shown when launched by another
    Wubi instance
  * Fixed show-info, it was using an incorrect distro instance for the
    URL
  * No need to use a second temp directory
  * Display controls with transparent background without artifacts
  * Preliminary gettext support (to be completed)
  * Completed gettext support
  * Merged old translations
  * Use previous distro name in strings during uninstallation progress

 -- Agostino Russo <agostino.russo@gmail.com>  Wed, 04 Mar 2009 02:46:31 +0000